syntax = "proto3";
package pb;
option go_package = "github.com/phatbb/userinfo";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";





message User {
    string username = 1;
    string full_name = 2;
    string email = 3;
    string role = 4;
    google.protobuf.Timestamp password_changed_at = 5;
    google.protobuf.Timestamp created_at = 6;
}
message UserResponse { User user = 1;}
message GetInfoRequest
{
string Id =1;
}
message Wallet {
  uint64 balance =1;
  string currency =2;
  User user = 3;
  google.protobuf.Timestamp create_at = 4;
  google.protobuf.Timestamp updated_at = 5;

}


service UserService {
    rpc FindUserById(GetInfoRequestId) returns (User){
        option (google.api.http) = {
            post: "/v1/get_user"
            body: "*"
        };

    };
    rpc FindUserByEmail(GetInfoRequestGmail) returns (User){
        option (google.api.http) = {
            post: "/v1/get_user"
            body: "*"
        };

    };
    rpc GetUserWalletInfo(GetInfoRequestGmail) returns (Wallet){
        option (google.api.http) = {
            post: "/v1/get_wallet"
            body: "*"
        };

    };
}
message GetInfoRequestId
{
  string Id =1;
}

message GetInfoRequestGmail
{
  string Gmail =1;
}

